# ella

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  deny.toml  justfile
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: docker-publish.yaml  ella-cli-release.yaml  python-publish.yaml  rust.yaml
docker/: Dockerfile.alpine  README.md
ella/: Cargo.toml  README.md  release.toml
ella-cli/: Cargo.toml  README.md
ella-cli/docs/: reference.md
ella-cli/src/: connect.rs  interactive.rs  main.rs  open.rs  serve.rs
ella-common/: Cargo.toml
ella-common/src/: array.rs  error.rs  lib.rs  ops.rs  py.rs  row.rs  tensor_value.rs  time.rs
ella-derive/: Cargo.toml
ella-derive/src/: lib.rs
ella-engine/: Cargo.toml
ella-engine/examples/: pubsub.rs
ella-engine/src/: catalog.rs  cluster.rs  codec.rs  config.rs  engine.rs  lazy.rs  lib.rs  path.rs  plan.rs  rules.rs  schema.rs  table.rs  util.rs
ella-engine/src/engine/: context.rs  state.rs
ella-engine/src/lazy/: backend.rs  view.rs
ella-engine/src/metrics/: server.rs
ella-engine/src/registry/: id.rs  snapshot.rs  transaction_log.rs  transactions.rs
ella-engine/src/table/: config.rs  info.rs  topic.rs  view.rs
ella-engine/src/table/topic/: channel.rs  config.rs  row.rs  rw.rs  shard.rs
ella-engine/src/table/topic/shard/: compact.rs  writer.rs
ella-engine/src/util/: parquet.rs
ella-server/: Cargo.toml  build.rs
ella-server/api/: engine.proto
ella-server/src/: client.rs  convert.rs  lib.rs  server.rs  table.rs
ella-server/src/client/: backend.rs  publisher.rs
ella-server/src/server/: auth.rs  ella.rs  flight.rs
ella-tensor/: Cargo.toml
ella-tensor/examples/: tensor.rs
ella-tensor/src/: arrow.rs  column.rs  frame.rs  lib.rs  mask.rs  ops.rs  row.rs  slice.rs  tensor.rs
ella-tensor/src/frame/: data_frame.rs  print.rs
ella-tensor/src/mask/: data.rs  fmt.rs  iter.rs
ella-tensor/src/ops/: boolean.rs  combine.rs  constructors.rs  convert.rs  shape.rs  unary_arith.rs
ella-tensor/src/tensor/: fmt.rs
ella/examples/: client_server.rs
ella/src/: catalog.rs  ella.rs  lib.rs  schema.rs  table.rs
ella/src/table/: publisher.rs
ella/tests/: derive.rs
pyella/: Cargo.toml  README.md  pyproject.toml
pyella/ella/: __init__.py  __init__.pyi  frame.py  frame.pyi  lazy.py  lazy.pyi  table.py  table.pyi  types.py  types.pyi
pyella/examples/: publisher.py
pyella/generate_typing/: Cargo.toml
pyella/generate_typing/src/: generate_data_types.rs
pyella/src/: data_types.rs  dataframe.rs  ella.rs  engine.rs  lazy.rs  lib.rs  table.rs  utils.rs
pyella/src/dataframe/: column.rs
pyella/src/table/: publisher.rs
pysynapse/: Cargo.toml  pyproject.toml
pysynapse/examples/: publisher.py
pysynapse/src/: data_types.rs  dataframe.rs  engine.rs  lazy.rs  lib.rs  runtime.rs  synapse.rs  table.rs  topic.rs  utils.rs
pysynapse/synapse/: __init__.py
synapse/: Cargo.toml
synapse-common/: Cargo.toml
synapse-common/src/: error.rs  lib.rs  py.rs  row.rs  shape.rs  tensor_type.rs  tensor_value.rs
synapse-common/src/row/: array.rs  format.rs  scalar.rs  sink.rs  stream.rs  tuple.rs
synapse-common/src/shape/: add.rs  iter.rs  max.rs
synapse-derive/: Cargo.toml
synapse-derive/src/: lib.rs
synapse-engine/: Cargo.toml
synapse-engine/examples/: pubsub.rs
synapse-engine/src/: catalog.rs  cluster.rs  codec.rs  config.rs  context.rs  engine.rs  lazy.rs  lib.rs  metrics.rs  plan.rs  py.rs  registry.rs  schema.rs  table.rs  topic.rs  util.rs
synapse-engine/src/catalog/: id.rs  snapshot.rs  transaction_log.rs  transactions.rs
synapse-engine/src/engine/: context.rs  state.rs
synapse-engine/src/lazy/: backend.rs
synapse-engine/src/metrics/: load_monitor.rs  server.rs
synapse-engine/src/registry/: id.rs  snapshot.rs  transaction_log.rs
synapse-engine/src/table/: config.rs  info.rs  topic.rs  view.rs
synapse-engine/src/table/topic/: channel.rs  row.rs  rw.rs  shard.rs
synapse-engine/src/table/topic/shard/: compact.rs  writer.rs
synapse-engine/src/topic/: channel.rs  config.rs  row.rs  rw.rs  shard.rs
synapse-engine/src/topic/shard/: compact.rs  writer.rs
synapse-engine/src/util/: instrument.rs  work_queue.rs
synapse-python/: Cargo.toml
synapse-row/: Cargo.toml
synapse-runtime/: Cargo.toml
synapse-runtime/examples/: pubsub.rs
synapse-runtime/src/: lib.rs  py.rs  runtime.rs  schema.rs  topic.rs  util.rs  work_queue.rs
synapse-server/: Cargo.toml  build.rs
synapse-server/api/: engine.proto
synapse-server/examples/: client.rs  server.rs
synapse-server/src/: client.rs  convert.rs  lib.rs  prepare.rs  remote.rs  server.rs  table.rs  ticket.rs
synapse-server/src/client/: backend.rs  publisher.rs
synapse-server/src/server/: auth.rs  flight.rs  synapse.rs
synapse-tensor/: Cargo.toml
synapse-tensor/examples/: tensor.rs
synapse-tensor/src/: arrow.rs  column.rs  fmt.rs  frame.rs  lib.rs  mask.rs  ops.rs  py.rs  row.rs  shape.rs  slice.rs  tensor.rs  tensor_type.rs  tensor_value.rs
synapse-tensor/src/frame/: data_frame.rs
synapse-tensor/src/mask/: data.rs  fmt.rs  iter.rs
synapse-tensor/src/ops/: cmp.rs  combine.rs  constructors.rs  convert.rs  index.rs  masked.rs  shape.rs  slice.rs  unary_arith.rs
synapse-tensor/src/shape/: add.rs  index.rs  iter.rs  max.rs
synapse-tensor/src/tensor/: data.rs  iter.rs
synapse/examples/: client_server.rs
synapse/src/: catalog.rs  lib.rs  py.rs  schema.rs  synapse.rs  table.rs  topic.rs
synapse/src/table/: publisher.rs
synapse_runtime/: Cargo.toml
synapse_runtime/examples/: pubsub.rs
synapse_runtime/src/: context.rs  lib.rs  path.rs  runtime.rs  schema.rs  topic.rs
synapse_runtime/src/catalog/: snapshot.rs  transaction_log.rs  transactions.rs
synapse_runtime/src/topic/: config.rs  rw.rs  shard.rs  streaming.rs
synapse_tensor/: Cargo.toml
synapse_tensor/src/: column.rs  frame.rs  mask.rs  ops.rs  shape.rs  slice.rs  tensor.rs  tensor_value.rs
synapse_time/: Cargo.toml
tracing/: docker-compose.yaml  otel-collector.yaml  prometheus.yaml
(+25 files in other folders)
