[workspace]
members = [
    "synapse",
    "synapse-tensor",
    "synapse-engine",
    "synapse-time",
    "synapse-row",
    "pysynapse",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dexter Duckworth <dexterduck@users.noreply.github.com>"]

[workspace.dependencies]
synapse-time = { path = "./synapse-time" }
synapse-tensor = { path = "./synapse-tensor" }
synapse-engine = { path = "./synapse-engine" }
synapse = { path = "./synapse" }
pysynapse = { path = "./pysynapse" }

derive_more = "0.99.17"
serde = { version = "1.0.160", features = ["derive"] }
num-traits = "0.2.15"
time = { version = "0.3.20", features = ["serde-well-known"] }
thiserror = "1.0.40"
serde_json = "1.0.95"
paste = "1.0.12"
datafusion = "26.0.0"
arrow = { version = "41.0.0" }
arrow-schema = { version = "41.0.0", features = ["serde"] }
parquet = "41.0.0"
tracing = "0.1.37"
tokio = { version = "1.27.0" }
futures = "0.3.28"
mimalloc = "0.1.37"
uuid = { version = "1.3.1", features = ["v7", "serde"] }
pyo3 = "0.19.0"
strum = { version = "0.24.1", features = ["derive"] }
once_cell = "1.18.0"
object_store = "0.6.1"
thrift = "0.17"

[patch.crates-io]
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "1d3860dc813725b5a987aae4c3a8f4a7b2bfdb2d" }
