[workspace]
members = [
    "synapse-common",
    "synapse-tensor",
    "synapse-engine",
    "synapse-server",
    "synapse",
    "pysynapse",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dexter Duckworth <dexterduck@users.noreply.github.com>"]

[workspace.dependencies]
synapse-common = { path = "./synapse-common" }
synapse-tensor = { path = "./synapse-tensor" }
synapse-engine = { path = "./synapse-engine" }
synapse-server = { path = "./synapse-server" }
synapse = { path = "./synapse" }
pysynapse = { path = "./pysynapse" }

derive_more = "0.99.17"
serde = { version = "1.0.160", features = ["derive"] }
num-traits = "0.2.15"
time = { version = "0.3.20", features = ["serde-well-known"] }
thiserror = "1.0.40"
serde_json = "1.0.95"
paste = "1.0.12"
datafusion = "26.0.0"
datafusion-proto = "26.0.0"
arrow = { version = "41.0.0" }
arrow-schema = { version = "41.0.0", features = ["serde"] }
arrow-flight = { version = "41.0.0", features = ["flight-sql-experimental"] }
parquet = "41.0.0"
tracing = "0.1.37"
tokio = { version = "1.27.0" }
futures = "0.3.28"
mimalloc = "0.1.37"
uuid = { version = "1.3.1", features = ["v7", "serde"] }
pyo3 = "0.19.0"
strum = { version = "0.24.1", features = ["derive"] }
once_cell = "1.18.0"
object_store = "0.6.1"
thrift = "0.17"
tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["metrics"] }
prometheus-client = { version = "0.21.1", features = [] }
hyper = { version = "0.14.26", features = ["server", "http2"] }
async-trait = "0.1.62"
tonic = "0.9.2"
tonic-build = "0.9.2"
prost = "0.11.9"
protobuf-src = "1.1.0"
dashmap = "5.4.0"
url = { version = "2.3.1", features = ["serde"] }
flume = "0.10.14"
pin-project-lite = "0.2.9"

[patch.crates-io]
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "1d3860dc813725b5a987aae4c3a8f4a7b2bfdb2d" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion", rev = "1d3860dc813725b5a987aae4c3a8f4a7b2bfdb2d" }
