[workspace]
exclude = ["ella-cli"]
members = [
    "ella-common",
    "ella-tensor",
    "ella-engine",
    "ella-server",
    "ella-derive",
    "ella-cli",
    "ella",
    "pyella",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Dexter Duckworth <dexterduck@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackrockNeurotech/ella"

[workspace.metadata.release]
tag = false

[workspace.dependencies]
ella-common = { path = "./ella-common", version = "0.1.2" }
ella-tensor = { path = "./ella-tensor", version = "0.1.2" }
ella-engine = { path = "./ella-engine", version = "0.1.2" }
ella-server = { path = "./ella-server", version = "0.1.2" }
ella-derive = { path = "./ella-derive", version = "0.1.2" }
ella = { path = "./ella", version = "0.1.2" }
pyella = { path = "./pyella", version = "0.1.2" }

derive_more = "0.99.17"
serde = { version = "1.0.160", features = ["derive"] }
num-traits = "0.2.15"
time = { version = "0.3.20", features = ["serde-well-known"] }
thiserror = "1.0.40"
anyhow = "1.0.72"
serde_json = "1.0.95"
paste = "1.0.12"
datafusion = "27.0.0"
datafusion-proto = "27.0.0"
arrow = { version = "42.0.0" }
arrow-schema = { version = "42.0.0", features = ["serde"] }
arrow-flight = { version = "42.0.0", features = ["flight-sql-experimental"] }
parquet = "42.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1.27.0" }
tokio-test = "0.4.2"
futures = "0.3.28"
mimalloc = { version = "0.1.37", default-features = false }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
pyo3 = "0.19.0"
strum = { version = "0.24.1", features = ["derive"] }
once_cell = "1.18.0"
object_store = "0.6.1"
thrift = "0.17"
tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["metrics"] }
prometheus-client = { version = "0.21.1", features = [] }
hyper = { version = "0.14.26", features = ["server", "http2"] }
async-trait = "0.1.62"
tonic = "0.9.2"
tonic-build = "0.9.2"
prost = "0.11.9"
protobuf-src = "1.1.0"
dashmap = "5.4.0"
url = { version = "2.3.1", features = ["serde"] }
flume = "0.10.14"
pin-project-lite = "0.2.9"
smallvec = { version = "1.10.0", features = ["serde"] }
rand = "0.8.5"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
tower-http = "0.4.1"
comfy-table = "7.0.1"
