[package]
name = "ella-cli"
version = "0.1.3"
edition = "2021"
authors = ["Dexter Duckworth <dexterduck@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackrockNeurotech/ella"
description = "CLI tools for working with ella datastores."

[[bin]]
name = "ella"
path = "src/main.rs"

[dependencies]
ella = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mimalloc = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["history"] }
shlex = "1.1.0"
