[package]
name = "ella-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tools for working with ella datastores."

[[bin]]
name = "ella"
path = "src/main.rs"

[dependencies]
ella = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
mimalloc = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["history"] }
shlex = "1.1.0"

[features]
default = ["protobuf"]
protobuf = ["ella/protobuf"]
