[package]
name = "ella-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.1"
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.64"
quote = "1.0.29"
syn = { version = "2.0.25", features = ["full"] }
