[package]
name = "ella-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Client-server API for the ella datastore."

[dependencies]
ella-engine = { workspace = true }
ella-common = { workspace = true, features = ["flight"] }

arrow-flight = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
flume = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.70"
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
ella-tensor = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

# protobuf-src doesn't support Windows
# https://github.com/MaterializeInc/rust-protobuf-native/issues/4
[target.'cfg(not(target_os = "windows"))'.build-dependencies]
protobuf-src = { workspace = true }
