[package]
name = "ella-tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tensor API for the ella datastore."

[dependencies]
ella-common = { workspace = true }

arrow = { workspace = true }
smallvec = { version = "1.10.0", features = ["serde"] }
derive_more = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }

[features]
pyo3 = ["ella-common/pyo3"]
