[package]
name = "ella"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ella-tensor = { workspace = true }
ella-engine = { workspace = true }
ella-common = { workspace = true, features = ["flight"] }
ella-server = { workspace = true }
ella-derive = { workspace = true, optional = true }

thiserror = { workspace = true }
datafusion = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tracing-subscriber = "0.3.17"

[features]
default = ["derive"]
derive = ["ella-derive"]
pyo3 = ["ella-engine/pyo3", "ella-tensor/pyo3", "ella-common/pyo3"]
