[package]
name = "ella"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A streaming time-series datastore for low-latency applications."

[dependencies]
ella-tensor = { workspace = true }
ella-engine = { workspace = true }
ella-common = { workspace = true, features = ["flight"] }
ella-server = { workspace = true }
ella-derive = { workspace = true, optional = true }

thiserror = { workspace = true }
datafusion = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["derive", "metrics"]
derive = ["ella-derive"]
metrics = ["ella-engine/metrics"]
pyo3 = ["ella-engine/pyo3", "ella-tensor/pyo3", "ella-common/pyo3"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "uuid_unstable"]
rustdoc-args = ["--cfg", "uuid_unstable"]

[package.metadata.release]
disable-tag = true
