[project]
name = "pyella-rs"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
dependencies = ["pyarrow>=12.0.0"]

[project.urls]
Repository = "https://github.com/CerebusOSS/ella"
Changelog = "https://github.com/CerebusOSS/ella/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ella._internal"
locked = true
exclude = [{ path = "examples/**", format = "sdist" }]
