[package]
name = "pysynapse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "pysynapse"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
synapse = { workspace = true, features = ["pyo3"] }

tokio = { workspace = true, features = ["rt-multi-thread"] }
futures = { workspace = true }
derive_more = { workspace = true }
arrow = { workspace = true, features = ["pyarrow"] }
paste = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

mimalloc = { workspace = true, optional = true }


[features]
default = ["mimalloc"]
