[package]
name = "synapse-common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
time = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
paste = { workspace = true }
uuid = { workspace = true }
datafusion = { workspace = true }
serde_json = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
smallvec = { workspace = true }

pyo3 = { workspace = true, optional = true }
arrow-flight = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[features]
pyo3 = ["dep:pyo3", "datafusion/pyarrow"]
flight = ["arrow-flight", "tonic", "prost"]
