[package]
name = "synapse-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
datafusion = { workspace = true }
arrow-schema = { workspace = true }
thiserror = { workspace = true }
synapse-time = { workspace = true }
synapse-tensor = { workspace = true }

tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
futures = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
object_store = { workspace = true }
thrift = { workspace = true }

pyo3 = { workspace = true, optional = true }

async-trait = "0.1.62"
num-traits = "0.2.15"
tokio-stream = { version = "0.1.12", features = ["sync"] }
tokio-util = "0.7.7"
dashmap = "5.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

url = { version = "2.3.1", features = ["serde"] }
strum = { workspace = true }
flume = "0.10.14"

[dev-dependencies]
anyhow = "1.0.70"

[features]
pyo3 = ["dep:pyo3", "synapse-tensor/pyo3", "datafusion/pyarrow"]
