[package]
name = "synapse-tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
synapse-time = { workspace = true }

arrow = { workspace = true }
smallvec = { version = "1.10.0", features = ["serde"] }
derive_more = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }

pyo3 = { workspace = true, optional = true }
