[package]
name = "synapse"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
synapse-tensor = { workspace = true }
synapse-engine = { workspace = true, optional = true }
synapse-time = { workspace = true }

thiserror = { workspace = true }
datafusion = { workspace = true }
tracing = { workspace = true }
pyo3 = { workspace = true, optional = true }

tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
tracing-subscriber = "0.3.17"

[features]
default = ["engine"]
engine = ["synapse-engine"]
pyo3 = ["dep:pyo3", "synapse-engine/pyo3", "synapse-tensor/pyo3"]
