[package]
name = "synapse"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
synapse-tensor = { workspace = true }
synapse-engine = { workspace = true }
synapse-common = { workspace = true, features = ["flight"] }
synapse-server = { workspace = true }

thiserror = { workspace = true }
datafusion = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
tracing-subscriber = "0.3.17"

[features]
default = []
pyo3 = ["synapse-engine/pyo3", "synapse-tensor/pyo3", "synapse-common/pyo3"]
