[package]
name = "synapse"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
synapse-tensor = { workspace = true }
synapse-engine = { workspace = true }
synapse-common = { workspace = true, features = ["flight"] }
synapse-server = { workspace = true }
synapse-derive = { workspace = true, optional = true }

thiserror = { workspace = true }
datafusion = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tracing-subscriber = "0.3.17"

[features]
default = ["derive"]
derive = ["synapse-derive"]
pyo3 = ["synapse-engine/pyo3", "synapse-tensor/pyo3", "synapse-common/pyo3"]
