[package]
name = "synapse-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { workspace = true }
arrow-schema = { workspace = true }
thiserror = { workspace = true }
# parquet = { workspace = true }
# parquet = "39.0.0"

async-trait = "0.1.62"
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
ndarray = "0.15.6"
derive_more = "0.99.17"
smallvec = { version="1.10.0", features=["serde"] }
paste = "1.0.12"
time = { version="0.3.20", features=["serde-well-known"] }
num-traits = "0.2.15"
tokio-stream = { version = "0.1.12", features = ["sync"] }
futures = "0.3.28"
tokio-util = "0.7.7"
dashmap = "5.4.0"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
object_store = "0.5"
url = { version = "2.3.1", features = ["serde"] }
flexbuffers = "2.0.0"
base64 = "0.21.0"
synapse-tensor = { path = "../synapse_tensor" }
uuid = { version = "1.3.3", features = ["v7", "serde"] }
