[package]
name = "synapse-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { workspace = true }
arrow-schema = { workspace = true }
thiserror = { workspace = true }
synapse-time = { workspace = true }
synapse-tensor = { workspace = true }

tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
futures = { workspace = true }
derive_more = { workspace = true }

async-trait = "0.1.62"
num-traits = "0.2.15"
tokio-stream = { version = "0.1.12", features = ["sync"] }
tokio-util = "0.7.7"
dashmap = "5.4.0"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
object_store = "0.5"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v7", "serde"] }

[dev-dependencies]
anyhow = "1.0.70"
